Bug 60527 - [softpipe] fbo-stencil GL_DEPTH24_STENCIL8 clear regression
Summary: [softpipe] fbo-stencil GL_DEPTH24_STENCIL8 clear regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-02-09 03:02 UTC by Vinson Lee
Modified: 2013-02-12 15:15 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2013-02-09 03:02:36 UTC
mesa: 1d71106f5c7084c90dacc8af7d06fa8c8eb6d9f1 (master)

$ ./bin/fbo-stencil GL_DEPTH24_STENCIL8 clear -auto
Mesa warning: failed to remap glClampColorARB
Mesa warning: failed to remap glTexBufferARB
Mesa warning: failed to remap glFramebufferTextureARB
Mesa warning: failed to remap glVertexAttribDivisorARB
Mesa warning: failed to remap glProgramParameteriARB
Testing GL_DEPTH24_STENCIL8.
Testing glClear(stencil).
Probe at (0,0)
  Expected: 0.000000 1.000000 0.000000
  Observed: 0.000000 0.000000 0.000000
PIGLIT: {'result': 'fail' }

16a30e201e10278049b6464d21556f59d892ecf0 is the first bad commit
commit 16a30e201e10278049b6464d21556f59d892ecf0
Author: Marek Olšák <maraeo@gmail.com>
Date:   Mon Jan 14 06:45:50 2013 +0100

    softpipe: implement separate depth-stencil clear
    
    The CAP is going away.
    
    Reviewed-by: Brian Paul <brianp@vmware.com>

:040000 040000 3776550e80223b032167572d7d34e8dc4b64a31d dcfc8a78bba351a39a856c95d9ad3cf64021f552 M	src
bisect run success
Comment 1 Brian Paul 2013-02-12 15:15:40 UTC
Fixed by commit 4bfdef87e66bfb2459af570351798d7754ddfb9f


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.